--- a/海关.md
+++ b/海关.md
@@ -32,8 +32,10 @@ graph LR
     style Root fill:#00b050,color:#fff,stroke:#333
     style B1 fill:#f9f9f9
     style B2 fill:#f9f9f9
+```
 
----
+
+# 海关监管期限
 
 ```mermaid
 graph LR
@@ -54,3 +56,52 @@ graph LR
     %% 样式美化
     style Root fill:#00b050,color:#fff,stroke:#333
     style B1,B2,B3 fill:#f9f9f9
+```
+
+# 海关监察相对人
+
+```mermaid
+graph LR
+    %% 核心节点
+    Root[相对人]
+    
+    %% 第一分支：报关人及其子项
+    Root --- B1[报关人]
+    B1 --- C1[进出口货物收发货人]
+    B1 --- C2[进出境运输工具负责人]
+    B1 --- C3[进出境物品所有人]
+    B1 --- C4[代理人]
+
+    %% 第二分支：报关活动相关人及其子项
+    Root --- B2[报关活动相关人]
+    B2 --- D1[承接保税加工、物流、仓储业务的企业]
+    B2 --- D2[转关运输承运人等]
+
+    %% 视觉样式设置
+    style Root fill:#00b050,color:#fff,stroke:#333
+    style B1,B2 fill:#f9f9f9
+```
+
+# 一般进出口监管制度
+
+```mermaid
+graph LR
+    %% 核心节点
+    Root[主要内容]
+    
+    %% 第一分支
+    Root --- B1[进出境时完纳进出口税费]
+
+    %% 第二分支
+    Root --- B2[进出境时提交国家实施贸易管制许可证件和其他相关证件]
+
+    %% 第三分支及其子项
+    Root --- B3["进出境放行（或离境）后结关"]
+    B3 --- C1[审核申报单证]
+    B3 --- C2[查验货物]
+    B3 --- C3[征收税费]
+    B3 --- C4[签章放行]
+
+    %% 视觉样式设置
+    style Root fill:#00b050,color:#fff,stroke:#333
+    style B3 fill:#f9f9f9
