--- a/报关单填制.md
+++ b/报关单填制.md
@@ -1,103 +1,99 @@
-<table border="1" cellspacing="0" cellpadding="5" style="width: 100%; border-collapse: collapse; font-family: sans-serif; font-size: 12px;">
-  <thead>
-    <tr>
-      <th colspan="9" style="text-align: center; font-size: 18px; padding: 10px; border: none;">
-        中华人民共和国海关进口货物报关单
-      </th>
-    </tr>
-  </thead>
-  
-  <tbody>
-    <tr>
-      <td colspan="2"><b>预录入编号：</b></td>
-      <td colspan="3"><b>海关编号：</b></td>
-      <td colspan="4"><b>(XX海关)</b></td>
-    </tr>
-    
-    <tr>
-      <td colspan="2" style="color: red; border: 2px solid red;"><b>境内收货人</b></td>
-      <td colspan="2" style="color: red; border: 2px solid red;"><b>进境关别</b></td>
-      <td colspan="2"><b>进口日期</b></td>
-      <td colspan="2"><b>申报日期</b></td>
-      <td><b>备案号</b></td>
-    </tr>
-    
-    <tr>
-      <td colspan="2"><b>境外发货人</b></td>
-      <td colspan="2"><b>运输方式</b></td>
-      <td colspan="2" style="color: red; border: 2px solid red;"><b>运输工具名称及航次号</b></td>
-      <td colspan="2"><b>提运单号</b></td>
-      <td><b>货物存放地点</b></td>
-    </tr>
-    
-    <tr>
-      <td colspan="2"><b>消费使用单位</b></td>
-      <td colspan="2"><b>监管方式</b></td>
-      <td colspan="2"><b>征免性质</b></td>
-      <td colspan="2"><b>许可证号</b></td>
-      <td><b>启运港</b></td>
-    </tr>
-    
-    <tr>
-      <td colspan="2"><b>合同协议号</b></td>
-      <td colspan="2"><b>贸易国 (地区)</b></td>
-      <td colspan="2"><b>启运国 (地区)</b></td>
-      <td colspan="2" style="color: red; border: 2px solid red;"><b>经停港</b></td>
-      <td><b>入境口岸</b></td>
-    </tr>
-    
-    <tr>
-      <td><b>包装种类</b></td>
-      <td><b>件数</b></td>
-      <td><b>毛重 (千克)</b></td>
-      <td><b>净重 (千克)</b></td>
+<br />
+
+<table width="100%" border="1" cellspacing="0" cellpadding="5" style="border-collapse: collapse; font-family: 'SimSun', serif; font-size: 12px; border: 1px solid #000; table-layout: fixed;">
+  <thead>
+    <tr>
+      <th colspan="10" style="text-align: center; font-size: 20px; padding: 15px; border-bottom: 2px solid #000;">
+        中华人民共和国海关进口货物报关单
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td colspan="3">预录入编号：</td>
+      <td colspan="5">海关编号：</td>
+      <td colspan="3" align="right">页码/页数：</td>
+    </tr>
+    <tr>
+      <td colspan="2" style="border: 2px solid red;"><b>境内收货人</b></td>
+      <td colspan="2" style="border: 2px solid red;"><b>进境关别</b></td>
+      <td colspan="2">进口日期</td>
+      <td colspan="2">申报日期</td>
+      <td colspan="3">备案号</td>
+    </tr>
+    <tr>
+      <td colspan="2">境外发货人</td>
+      <td colspan="2">运输方式</td>
+      <td colspan="2" style="border: 2px solid red;"><b>运输工具名称及航次号</b></td>
+      <td colspan="2">提运单号</td>
+      <td colspan="3"> 货物存放地点 </td>
+    </tr>
+    <tr>
+      <td colspan="2">消费使用单位</td>
+      <td colspan="2">监管方式</td>
+      <td colspan="2">征免性质</td>
+      <td colspan="2">许可证号</td>
+      <td colspan="3">启运港</td>
+    </tr>
+    <tr>
+      <td colspan="2">合同协议号</td>
+      <td colspan="2">贸易国 (地区)</td>
+      <td colspan="2">启运国 (地区)</td>
+      <td colspan="2" style="border: 2px solid red;"><b>经停港</b></td>
+      <td colspan="3">入境口岸</td>
+    </tr>
+    <tr style="background-color: #fafafa;">
+      <td colspan="2">包装种类</td>
+      <td>件数</td>
+      <td>毛重 (千克)</td>
+      <td>净重 (千克)</td> 
       <td><b>成交方式</b></td>
-      <td><b>运费</b></td>
-      <td><b>保费</b></td>
-      <td colspan="2"><b>杂费</b></td>
-    </tr>
+      <td colspan="1">运费</td>
+      <td colspan="2">保费</td>
+      <td colspan="2">杂费</td>
+    </tr>
     
-    <tr>
-      <td colspan="9" style="color: red; border: 2px solid red; height: 40px;"><b>随附单证及编号</b></td>
-    </tr>
+    <tr>
+      <td colspan="10" style="height: 50px; border: 2px solid red;">随附单证及编号</td>
+    </tr>
+    <tr>
+      <td colspan="10" style="height: 50px; border: 2px solid red;">标记唛码及备注</td>
+    </tr>
     
-    <tr>
-      <td colspan="9" style="height: 60px;"><b>标记唛码及备注</b></td>
-    </tr>
-    
-    <tr style="background-color: #f9f9f9; text-align: center;">
-      <td><b>项号</b></td>
-      <td><b>商品编号</b></td>
-      <td colspan="2"><b>商品名称及规格型号</b></td>
-      <td><b>数量及单位</b></td>
-      <td><b>单价/总价/币制</b></td>
-      <td><b>原产国 (地区)</b></td>
-      <td><b>最终目的国 (地区)</b></td>
-      <td><b>征免</b></td>
-    </tr>
-    
-    <tr style="height: 100px;">
-      <td></td>
-      <td></td>
-      <td colspan="2"></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    
-    <tr>
-      <td colspan="4" style="height: 60px; vertical-align: top;">
-        <b>报关人员：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;报关人员证号：&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;电话：</b>
-      </td>
-      <td colspan="3" style="vertical-align: top;">
-        <b>兹申明对以上内容承担如实申报、依法纳税之法律责任</b><br><br>
-        <p style="text-align: center;">申报单位 (签章)</p>
-      </td>
-      <td colspan="2" style="vertical-align: top;">
-        <b>海关批注及签章</b>
-      </td>
-    </tr>
-  </tbody>
+    <tr align="center" style="background-color: #e0e0e0; font-weight: bold;">
+      <td width="5%">项号</td>
+      <td width="12%">商品编号</td>
+      <td colspan="2">商品名称及规格型号</td>
+      <td width="10%">数量及单位</td>
+      <td width="15%">单价/总价/币制</td>
+      <td>原产国（地区）</td>
+      <td>最终目的国（地区）</td>
+      <td>境内目的国</td>
+      <td>征免</td>
+    </tr>
+    <tr height="80">
+      <td align="center">1</td>
+      <td></td>
+      <td colspan="3"></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+    </tr>
+    <tr>
+      <td colspan="4" valign="top" style="height: 80px; border-top: 2px solid #000;">
+        报关人员：<br />证号：<br />电话：
+      </td>
+      <td colspan="4" valign="top" align="center" style="border-top: 2px solid #000;">
+        <br />兹申明对以上内容承担如实申报、依法纳税之法律责任<br /><br />
+        <b>申报单位 (签章)</b>
+      </td>
+      <td colspan="2" valign="top" style="border-top: 2px solid #000;">
+        海关批注及签章
+      </td>
+    </tr>
+  </tbody>
 </table>
+
+<br /> 
