--- a/报关单填制.md
+++ b/报关单填制.md
@@ -82,8 +82,7 @@
       <td></td>
     </tr>
     <tr>
-      <td colspan="4" valign="top" style="height: 80px; border-top: 2px solid #000;">
-        报关人员：<br />证号：<br />电话：
+      <td colspan="4" valign="top" style="height: 80px; border-top: 2px solid #000;">报关人员：<br />证号：<br />电话：<br/>申报单位：
       </td>
       <td colspan="4" valign="top" align="center" style="border-top: 2px solid #000;">
         <br />兹申明对以上内容承担如实申报、依法纳税之法律责任<br /><br />
