--- a/报关单填制.md
+++ b/报关单填制.md
@@ -1,98 +1,12 @@
 <br />
 
-<table width="100%" border="1" cellspacing="0" cellpadding="5" style="border-collapse: collapse; font-family: 'SimSun', serif; font-size: 12px; border: 1px solid #000; table-layout: fixed;">
-  <thead>
-    <tr>
-      <th colspan="10" style="text-align: center; font-size: 20px; padding: 15px; border-bottom: 2px solid #000;">
-        中华人民共和国海关进口货物报关单
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td colspan="3">预录入编号：</td>
-      <td colspan="5">海关编号：</td>
-      <td colspan="3" align="right">页码/页数：</td>
-    </tr>
-    <tr>
-      <td colspan="2" style="border: 2px solid red;"><b>境内收货人</b></td>
-      <td colspan="2" style="border: 2px solid red;"><b>进境关别</b></td>
-      <td colspan="2">进口日期</td>
-      <td colspan="2">申报日期</td>
-      <td colspan="3">备案号</td>
-    </tr>
-    <tr>
-      <td colspan="2">境外发货人</td>
-      <td colspan="2">运输方式</td>
-      <td colspan="2" style="border: 2px solid red;"><b>运输工具名称及航次号</b></td>
-      <td colspan="2">提运单号</td>
-      <td colspan="3"> 货物存放地点 </td>
-    </tr>
-    <tr>
-      <td colspan="2">消费使用单位</td>
-      <td colspan="2">监管方式</td>
-      <td colspan="2">征免性质</td>
-      <td colspan="2">许可证号</td>
-      <td colspan="3">启运港</td>
-    </tr>
-    <tr>
-      <td colspan="2">合同协议号</td>
-      <td colspan="2">贸易国 (地区)</td>
-      <td colspan="2">启运国 (地区)</td>
-      <td colspan="2" style="border: 2px solid red;"><b>经停港</b></td>
-      <td colspan="3">入境口岸</td>
-    </tr>
-    <tr style="background-color: #fafafa;">
-      <td colspan="2">包装种类</td>
-      <td>件数</td>
-      <td>毛重 (千克)</td>
-      <td>净重 (千克)</td> 
-      <td><b>成交方式</b></td>
-      <td colspan="1">运费</td>
-      <td colspan="2">保费</td>
-      <td colspan="2">杂费</td>
-    </tr>
-    
-    <tr>
-      <td colspan="10" style="height: 50px; border: 2px solid red;">随附单证及编号</td>
-    </tr>
-    <tr>
-      <td colspan="10" style="height: 50px; border: 2px solid red;">标记唛码及备注</td>
-    </tr>
-    
-    <tr align="center" style="background-color: #e0e0e0; font-weight: bold;">
-      <td width="5%">项号</td>
-      <td width="12%">商品编号</td>
-      <td colspan="2">商品名称及规格型号</td>
-      <td width="10%">数量及单位</td>
-      <td width="15%">单价/总价/币制</td>
-      <td>原产国（地区）</td>
-      <td>最终目的国（地区）</td>
-      <td>境内目的国</td>
-      <td>征免</td>
-    </tr>
-    <tr height="80">
-      <td align="center">1</td>
-      <td></td>
-      <td colspan="3"></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td colspan="4" valign="top" style="height: 80px; border-top: 2px solid #000;">报关人员：<br />证号：<br />电话：<br/>申报单位：
-      </td>
-      <td colspan="4" valign="top" align="center" style="border-top: 2px solid #000;">
-        <br />兹申明对以上内容承担如实申报、依法纳税之法律责任<br /><br />
-        <b>申报单位 (签章)</b>
-      </td>
-      <td colspan="2" valign="top" style="border-top: 2px solid #000;">
-        海关批注及签章
-      </td>
-    </tr>
-  </tbody>
-</table>
+<table width="100%" border="1" cellspacing="0" cellpadding="5" style="border-collapse: collapse; font-family: 'SimSun', serif; font-size: 12px; border: 1px solid #000; table-layout: fixed;">   <thead>     <tr>       <th colspan="10" style="text-align: center; font-size: 20px; padding: 15px; border-bottom: 2px solid #000;">         中华人民共和国海关进口货物报关单       </th>     </tr>   </thead>   <tbody>     <tr>       <td colspan="3">预录入编号：1</td>       <td colspan="5">海关编号：2</td>       <td colspan="3" align="right">页码/页数：3</td>     </tr>     <tr>       <td colspan="2" style="border: 2px solid red;"><b>境内收货人：4</b></td>       <td colspan="2" style="border: 2px solid red;"><b>进境关别：5</b></td>       <td colspan="2">进口日期：6</td>       <td colspan="2">申报日期：7</td>       <td colspan="3">备案号：8</td>     </tr>     <tr>       <td colspan="2">境外发货人：9</td>       <td colspan="2">运输方式：10</td>       <td colspan="2" style="border: 2px solid red;"><b>运输工具名称及航次号：11</b></td>       <td colspan="2">提运单号：12</td>       <td colspan="3"> 货物存放地点：13 </td>     </tr>     <tr>       <td colspan="2">消费使用单位：14</td>       <td colspan="2">监管方式：15</td>       <td colspan="2">征免性质：16</td>       <td colspan="2">许可证号：17</td>       <td colspan="3">启运港：18</td>     </tr>     <tr>       <td colspan="2">合同协议号：19</td>       <td colspan="2">贸易国 (地区)：20</td>       <td colspan="2">启运国 (地区)：21</td>       <td colspan="2" style="border: 2px solid red;"><b>经停港：22</b></td>       <td colspan="3">入境口岸：23</td>     </tr>     <tr style="background-color: #fafafa;">       <td colspan="2">包装种类：24</td>       <td>件数：25</td>       <td>毛重 (千克)：26</td>       <td>净重 (千克)：27</td>        <td><b>成交方式：28</b></td>       <td colspan="1">运费：29</td>       <td colspan="2">保费：30</td>       <td colspan="2">杂费：31</td>     </tr>          <tr>       <td colspan="10" style="height: 50px; border: 2px solid red;">随附单证及编号：32</td>     </tr>     <tr>       <td colspan="10" style="height: 50px; border: 2px solid red;">标记唛码及备注：33</td>     </tr>          <tr align="center" style="background-color: #e0e0e0; font-weight: bold;">       <td width="5%">项号：34</td>       <td width="12%">商品编号：35</td>       <td colspan="2">商品名称及规格型号：36</td>       <td width="10%">数量及单位：37</td>       <td width="15%">单价/总价/币制：38</td>       <td>原产国（地区）：39</td>       <td>最终目的国（地区）：40</td>       <td>境内目的国：41</td>       <td>征免：42</td>     </tr>     <tr height="80">       <td align="center">1</td>       <td></td>       <td colspan="3"></td>       <td></td>       <td></td>       <td></td>       <td></td>       <td></td>     </tr>     <tr>       <td colspan="4" valign="top" style="height: 80px; border-top: 2px solid #000;">报关人员：43<br />证号：44<br />电话：45
 
-<br /> 
+
+申报单位：46       </td>       <td colspan="4" valign="top" align="center" style="border-top: 2px solid #000;">         <br />兹申明对以上内容承担如实申报、依法纳税之法律责任：47<br /><br />         <b>申报单位 (签章)：48</b>       </td>       <td colspan="2" valign="top" style="border-top: 2px solid #000;">         海关批注及签章：49       </td>     </tr>   </tbody> </table>
+
+<br 
+
+---
+
+1 佛文儿
