--- a/报关单填制.md
+++ b/报关单填制.md
@@ -9,4 +9,52 @@
 
 ---
 
-1 佛文儿
+1. **预录入编号**：1
+2. **海关编号**：2
+3. **页码/页数**：3
+4. **境内收货人**：4
+5. **进境关别**：5
+6. **进口日期**：6
+7. **申报日期**：7
+8. **备案号**：8
+9. **境外发货人**：9
+10. **运输方式**：10
+11. **运输工具名称及航次号**：11
+12. **提运单号**：12
+13. **货物存放地点**：13
+14. **消费使用单位**：14
+15. **监管方式**：15
+16. **征免性质**：16
+17. **许可证号**：17
+18. **启运港**：18
+19. **合同协议号**：19
+20. **贸易国 (地区)**：20
+21. **启运国 (地区)**：21
+22. **经停港**：22
+23. **入境口岸**：23
+24. **包装种类**：24
+25. **件数**：25
+26. **毛重 (千克)**：26
+27. **净重 (千克)**：27
+28. **成交方式**：28
+29. **运费**：29
+30. **保费**：30
+31. **杂费**：31
+32. **随附单证及编号**：32
+33. **标记唛码及备注**：33
+34. **项号**：34
+35. **商品编号**：35
+36. **商品名称及规格型号**：36
+37. **数量及单位**：37
+38. **单价/总价/币制**：38
+39. **原产国（地区）**：39
+40. **最终目的国（地区）**：40
+41. **境内目的国**：41
+42. **征免**：42
+43. **报关人员**：43
+44. **证号**：44
+45. **电话**：45
+46. **申报单位**：46
+47. **法律责任申明**：47
+48. **申报单位 (签章)**：48
+49. **海关批注及签章**：49
