--- a/报关单填制.md
+++ b/报关单填制.md
@@ -1,6 +1,6 @@
 <br />
 
-<table width="100%" border="1" cellspacing="0" cellpadding="5" style="border-collapse: collapse; font-family: 'SimSun', serif; font-size: 12px; border: 1px solid #000; table-layout: fixed;">   <thead>     <tr>       <th colspan="10" style="text-align: center; font-size: 20px; padding: 15px; border-bottom: 2px solid #000;">         中华人民共和国海关进口货物报关单       </th>     </tr>   </thead>   <tbody>     <tr>       <td colspan="3">预录入编号：1</td>       <td colspan="5">海关编号：2</td>       <td colspan="3" align="right">页码/页数：3</td>     </tr>     <tr>       <td colspan="2" style="border: 2px solid red;"><b>境内收货人：4</b></td>       <td colspan="2" style="border: 2px solid red;"><b>进境关别：5</b></td>       <td colspan="2">进口日期：6</td>       <td colspan="2">申报日期：7</td>       <td colspan="3">备案号：8</td>     </tr>     <tr>       <td colspan="2">境外发货人：9</td>       <td colspan="2">运输方式：10</td>       <td colspan="2" style="border: 2px solid red;"><b>运输工具名称及航次号：11</b></td>       <td colspan="2">提运单号：12</td>       <td colspan="3"> 货物存放地点：13 </td>     </tr>     <tr>       <td colspan="2">消费使用单位：14</td>       <td colspan="2">监管方式：15</td>       <td colspan="2">征免性质：16</td>       <td colspan="2">许可证号：17</td>       <td colspan="3">启运港：18</td>     </tr>     <tr>       <td colspan="2">合同协议号：19</td>       <td colspan="2">贸易国 (地区)：20</td>       <td colspan="2">启运国 (地区)：21</td>       <td colspan="2" style="border: 2px solid red;"><b>经停港：22</b></td>       <td colspan="3">入境口岸：23</td>     </tr>     <tr style="background-color: #fafafa;">       <td colspan="2">包装种类：24</td>       <td>件数：25</td>       <td>毛重 (千克)：26</td>       <td>净重 (千克)：27</td>        <td><b>成交方式：28</b></td>       <td colspan="1">运费：29</td>       <td colspan="2">保费：30</td>       <td colspan="2">杂费：31</td>     </tr>          <tr>       <td colspan="10" style="height: 50px; border: 2px solid red;">随附单证及编号：32</td>     </tr>     <tr>       <td colspan="10" style="height: 50px; border: 2px solid red;">标记唛码及备注：33</td>     </tr>          <tr align="center" style="background-color: #e0e0e0; font-weight: bold;">       <td width="5%">项号：34</td>       <td width="12%">商品编号：35</td>       <td colspan="2">商品名称及规格型号：36</td>       <td width="10%">数量及单位：37</td>       <td width="15%">单价/总价/币制：38</td>       <td>原产国（地区）：39</td>       <td>最终目的国（地区）：40</td>       <td>境内目的国：41</td>       <td>征免：42</td>     </tr>     <tr height="80">       <td align="center">1</td>       <td></td>       <td colspan="3"></td>       <td></td>       <td></td>       <td></td>       <td></td>       <td></td>     </tr>     <tr>       <td colspan="4" valign="top" style="height: 80px; border-top: 2px solid #000;">报关人员：43<br />证号：44<br />电话：45
+<table width="100%" border="1" cellspacing="0" cellpadding="5" style="border-collapse: collapse; font-family: 'SimSun', serif; font-size: 12px; border: 1px solid #000; table-layout: fixed;">   <thead>     <tr>       <th colspan="10" style="text-align: center; font-size: 20px; padding: 15px; border-bottom: 2px solid #000;">         中华人民共和国海关进口货物报关单       </th>     </tr>   </thead>   <tbody>     <tr>       <td colspan="3">预录入编号：1</td>       <td colspan="5">海关编号：2</td>       <td colspan="3" align="right">页码/页数：3</td>     </tr>     <tr>       <td colspan="2" style="border: 2px solid red;"><b>境内收货人：4</b></td>       <td colspan="2" style="border: 2px solid red;"><b>进境关别：5</b></td>       <td colspan="2">进口日期：6</td>       <td colspan="2">申报日期：7</td>       <td colspan="3">备案号：8</td>     </tr>     <tr>       <td colspan="2">境外发货人：9</td>       <td colspan="2">运输方式：10</td>       <td colspan="2" style="border: 2px solid red;"><b>运输工具名称及航次号：11</b></td>       <td colspan="2">提运单号：12</td>       <td colspan="3"> 货物存放地点：13 </td>     </tr>     <tr>       <td colspan="2">消费使用单位：14</td>       <td colspan="2">监管方式：15</td>       <td colspan="2">征免性质：16</td>       <td colspan="2">许可证号：17</td>       <td colspan="3">启运港：18</td>     </tr>     <tr>       <td colspan="2">合同协议号：19</td>       <td colspan="2">贸易国 (地区)：20</td>       <td colspan="2">启运国 (地区)：21</td>       <td colspan="2" style="border: 2px solid red;"><b>经停港：22</b></td>       <td colspan="3">入境口岸：23</td>     </tr>     <tr style="background-color: #fafafa;">       <td colspan="2">包装种类：24</td>       <td>件数：25</td>       <td>毛重 (千克)：26</td>       <td>净重 (千克)：27</td>        <td><b>成交方式：28</b></td>       <td colspan="1">运费：29</td>       <td colspan="2">保费：30</td>       <td colspan="2">杂费：31</td>     </tr>          <tr>       <td colspan="10" style="height: 50px; border: 2px solid red;">随附单证及编号：32</td>     </tr>     <tr>       <td colspan="10" style="height: 50px; border: 2px solid red;">标记唛码及备注：33</td>     </tr>          <tr align="center" style="background-color: #e0e0e0; font-weight: bold;">       <td width="5%">项号：34</td>       <td width="12%">商品编号：35</td>       <td colspan="2">商品名称及规格型号：36</td>       <td width="10%">数量及单位：37</td>       <td width="15%">单价/总价/币制：38</td>       <td>原产国（地区）：39</td>       <td>最终目的国（地区）：40</td>       <td>境内目的地：41</td>       <td>征免：42</td>     </tr>     <tr height="80">       <td align="center">1</td>       <td></td>       <td colspan="3"></td>       <td></td>       <td></td>       <td></td>       <td></td>       <td></td>     </tr>     <tr>       <td colspan="4" valign="top" style="height: 80px; border-top: 2px solid #000;">报关人员：43<br />证号：44<br />电话：45
 
 
 申报单位：46       </td>       <td colspan="4" valign="top" align="center" style="border-top: 2px solid #000;">         <br />兹申明对以上内容承担如实申报、依法纳税之法律责任：47<br /><br />         <b>申报单位 (签章)：48</b>       </td>       <td colspan="2" valign="top" style="border-top: 2px solid #000;">         海关批注及签章：49       </td>     </tr>   </tbody> </table>
@@ -10,46 +10,46 @@
 ---
 
 1. **预录入编号**：1
-2. **海关编号**：2
+2. **海关编号**：前四位是申报关区代码，然后四位是年份，然后1是代表进口或进境，之后是报关单的序号
 3. **页码/页数**：3
-4. **境内收货人**：4
-5. **进境关别**：5
-6. **进口日期**：6
-7. **申报日期**：7
-8. **备案号**：8
-9. **境外发货人**：9
-10. **运输方式**：10
-11. **运输工具名称及航次号**：11
-12. **提运单号**：12
-13. **货物存放地点**：13
-14. **消费使用单位**：14
-15. **监管方式**：15
+4. **境内收货人**：填消费企业或者代理企业，括号里填海关十位数代码，同时会显示出18位信用代码和10位商检代码
+5. **进境关别**：货物进出境的口岸和关区，括号里填关区四位代码
+6. **进口日期**：货物实际进出境的日期，二线进口填向海关申报的日期
+7. **申报日期**：不用填，系统会填
+8. **备案号**：这里填的都是一些加工贸易账册手册电子账册或者其他手册，还有一些免表
+9. **境外发货人**：英文企业名称和AEO编号
+10. **运输方式**：空运填5，海运填2
+11. **运输工具名称及航次号**：水路运输前半段是船名运输工具名称，后半段是一个航次号
+12. **提运单号**：水路运输直接填。空运前面的是11位纯数字，然后下划线，后面是它的分单号的话就是每家航司它都有不同的分单号，那就是根据它航司提供的分单号是什么就填什么
+13. **货物存放地点**：货物进境后存放的场所和地点
+14. **消费使用单位**：最终拿到货物的企业
+15. **监管方式**：一般贸易是0110代码
 16. **征免性质**：16
-17. **许可证号**：17
-18. **启运港**：18
-19. **合同协议号**：19
-20. **贸易国 (地区)**：20
+17. **许可证号**：进口许可证，然后是出口许可证或者是自动进口许可证，有一些监管证件或者两用物项许可证都是要填报在这个地方的
+18. **启运港**：代码填写，没港口填国家或城市
+19. **合同协议号**：进口一般贸易合同号都是填在这里，字段能够录入全，那还是尽量去录入全
+20. **贸易国 (地区)**：代码录入
 21. **启运国 (地区)**：21
-22. **经停港**：22
-23. **入境口岸**：23
-24. **包装种类**：24
-25. **件数**：25
-26. **毛重 (千克)**：26
-27. **净重 (千克)**：27
-28. **成交方式**：28
-29. **运费**：29
-30. **保费**：30
-31. **杂费**：31
-32. **随附单证及编号**：32
-33. **标记唛码及备注**：33
-34. **项号**：34
-35. **商品编号**：35
-36. **商品名称及规格型号**：36
-37. **数量及单位**：37
-38. **单价/总价/币制**：38
-39. **原产国（地区）**：39
-40. **最终目的国（地区）**：40
-41. **境内目的国**：41
+22. **经停港**：运抵我国关境前最后一个港口
+23. **入境口岸**：进入我国关境的那个口岸代码
+24. **包装种类**：如果种类很多，还包括纸箱，那这个地方包装种类填报的时候一定要注意跟客户确认好，实际进口的时候，它的外包装是什么
+25. **件数**：件数就是实际你的最外面的包装的一个件数
+26. **毛重 (千克)**：实际货物加上它的外包装的一个总重量。一线进口的时候，我们都会去到海关仓单网上去查查。查的时候，它会显示包装件数和毛重是和你的运单是一致的，如果运单不一致，那是以仓单信息为准。当然这个时候就要去跟客户确认你们的他们的信息是不是录入有误，那是我们申报的件数是跟仓单件数是一致
+27. **净重 (千克)**：净重就是去除掉外包装的重量，去除掉外包装的重量
+28. **成交方式**：根据客户提供的报关单据实际情况该是什么成交方式对应去填写就可以了，这个地方也是代码输入的
+29. **运费**：币制/金额/3(总价)
+30. **保费**：百分比/1(率)
+31. **杂费**：同上
+32. **随附单证及编号**：例如我们之前课上有讲过核注清单，它要填那个 qd 号码就是填在这个地方。还有一些机电类的自动进口许可证，它并不是像进口许可证是填在这个许可证栏里头的。像机电自动进口许可证，我们称之为 O 证，它是填在这个地方。还有就是什么对位排除的编号，还有濒危物种证书都是填写在这个地方。  随附单证2：合同发票装箱单
+33. **标记唛码及备注**：集装箱数及号码，其他备注
+34. **项号**：下面的项号是干什么用的？这个项号就是涉及了一些加工贸易账册和一些手册，它在手册备案的时候，货物备案在这本手册里面第几项。金关二期逐渐不用填写了
+35. **商品编号**：hs编码，10位。如果这个货物涉及商法检的话是要填报一个 ciq 代码
+36. **商品名称及规格型号**：申报要素，说明你进口的货物是什么样的一个货物，它和进口的商品编码是否吻合，它们三者是有一个对应关系的
+37. **数量及单位**：第一行这个单位是可以随便根据客户的要求去写的，然后第二行和第三行代表的是法定数量和法定数，法定申报单位
+38. **单价/总价/币制**：填总价，单价系统会算出来
+39. **原产国（地区）**：填代码更快
+40. **最终目的国（地区）**：填中国142，除非只是中转
+41. **境内目的地**：这里边也是分了两个字段，前面一个字段是海关监管的一个区域代码，然后斜杠，后面是六位的代码是我们行政划分的一个代码
 42. **征免**：42
 43. **报关人员**：43
 44. **证号**：44
