--- a/报关单填制.md
+++ b/报关单填制.md
@@ -50,11 +50,16 @@
 39. **原产国（地区）**：填代码更快
 40. **最终目的国（地区）**：填中国142，除非只是中转
 41. **境内目的地**：这里边也是分了两个字段，前面一个字段是海关监管的一个区域代码，然后斜杠，后面是六位的代码是我们行政划分的一个代码
-42. **征免**：42
+42. **征免**：一遍是照章征税，按照表来
 43. **报关人员**：43
 44. **证号**：44
 45. **电话**：45
-46. **申报单位**：46
+46. **申报单位**：申报单位的一个名称，就像是我们万利申报的就是它就会显示上海万利报关有限公司
 47. **法律责任申明**：47
 48. **申报单位 (签章)**：48
 49. **海关批注及签章**：49
+
+
+---
+
+## 出口报关单
